@startuml
'https://plantuml.com/class-diagram

interface Strategy{
    + shoot(int LocationX, int LocationY, int speedX, int SpeedY, int direction, int power): List<BaseBullet>
}

class HeroAircraft{
    - Strategy strategy
    + SetStrategy(Strategy strategy): void
    + shoot(): List<BaseBullet>
}
class CircleShoot{
    + shoot(int LocationX, int LocationY, int speedX, int SpeedY, int direction, int power): List<BaseBullet>
}
class CircleEnemy{
    + shoot(int LocationX, int LocationY, int speedX, int SpeedY, int direction, int power): List<BaseBullet>
}
class DirectShoot{
    + shoot(int LocationX, int LocationY, int speedX, int SpeedY, int direction, int power): List<BaseBullet>
}
class DirectEnemy{
    + shoot(int LocationX, int LocationY, int speedX, int SpeedY, int direction, int power): List<BaseBullet>
}
class DoubleShoot{
    + shoot(int LocationX, int LocationY, int speedX, int SpeedY, int direction, int power): List<BaseBullet>
}
class DoubleEnemy{
    + shoot(int LocationX, int LocationY, int speedX, int SpeedY, int direction, int power): List<BaseBullet>
}
class ScatterShoot{
    + shoot(int LocationX, int LocationY, int speedX, int SpeedY, int direction, int power): List<BaseBullet>
}
class ScatterEnemy{
    + shoot(int LocationX, int LocationY, int speedX, int SpeedY, int direction, int power): List<BaseBullet>
}

Strategy <|.. CircleShoot
Strategy <|.. CircleEnemy
Strategy <|.. DirectShoot
Strategy <|.. DirectEnemy
Strategy <|.. DoubleShoot
Strategy <|.. DoubleEnemy
Strategy <|.. ScatterShoot
Strategy <|.. ScatterEnemy
HeroAircraft o--> Strategy


@enduml